--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.pig/pig -->
+        <dependency>
+            <groupId>org.apache.pig</groupId>
+            <artifactId>pig</artifactId>
+            <version>0.17.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
