--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,18 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Apache Pig -->
         <dependency>
             <groupId>org.apache.pig</groupId>
             <artifactId>pig</artifactId>
             <version>0.17.0</version>
+        </dependency>
+
+        <!-- Apache Hive -->
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+            <version>3.1.2</version>
         </dependency>
 
         <dependency>
