--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
             <version>2.4.6</version>
         </dependency>
 
+        <!-- Apache HBase -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>2.2.5</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
