--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
             <version>2.2.5</version>
         </dependency>
 
+        <!-- Apache Zookeeper -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
