--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,14 @@
             <artifactId>jackson-module-scala_2.12</artifactId>
             <version>2.10.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.janeluo/ikanalyzer -->
+        <dependency>
+            <groupId>com.janeluo</groupId>
+            <artifactId>ikanalyzer</artifactId>
+            <version>2012_u6</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
