--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>3.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-jdbc</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
         <!-- Apache Spark -->
         <dependency>
             <groupId>org.apache.spark</groupId>
