--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,18 @@
             <version>2.4.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.10</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.10</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
         <!-- Apache HBase -->
         <dependency>
             <groupId>org.apache.hbase</groupId>
