[TECH][Minggl]: spark sql

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.github.mgljava</groupId>
     <artifactId>bigData-study</artifactId>
     <version>1.0</version>
+    <properties>
+        <scala.binary.version>2.12</scala.binary.version>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.avro</groupId>
@@ -115,6 +118,12 @@
             <version>2.10.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.12</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.janeluo/ikanalyzer -->
         <dependency>
             <groupId>com.janeluo</groupId>
@@ -122,6 +131,56 @@
             <version>2012_u6</version>
         </dependency>
 
+        <dependency> <!-- Spark dependency -->
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_2.12</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+        <dependency> <!-- Spark dependency -->
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_2.12</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+        <dependency> <!-- Cassandra -->
+            <groupId>com.datastax.spark</groupId>
+            <artifactId>spark-cassandra-connector_2.10</artifactId>
+            <version>1.0.0-rc5</version>
+        </dependency>
+        <dependency> <!-- Cassandra -->
+            <groupId>com.datastax.spark</groupId>
+            <artifactId>spark-cassandra-connector-java_2.10</artifactId>
+            <version>1.0.0-rc5</version>
+        </dependency>
+        <dependency> <!-- Elastic search connector -->
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch-hadoop-mr</artifactId>
+            <version>2.0.0.RC1</version>
+        </dependency>
+        <dependency> <!-- Jetty demmo -->
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <version>8.1.14.v20131031</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.12</artifactId>
+            <version>3.0.8</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
