--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     </modules>
     <properties>
         <scala.binary.version>2.10</scala.binary.version>
-        <jackson.version>2.6.0</jackson.version>
+        <jackson.version>[2.9.10.4,)</jackson.version>
     </properties>
     <dependencies>
         <dependency>
@@ -81,19 +81,19 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.10</artifactId>
-            <version>2.2.0</version>
+            <version>[2.2.2,)</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.10</artifactId>
-            <version>2.2.0</version>
+            <version>[2.2.2,)</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_2.10</artifactId>
-            <version>2.2.0</version>
+            <version>[2.2.2,)</version>
         </dependency>
 
         <!-- Apache HBase -->
@@ -144,7 +144,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.12</version>
+            <version>[8.0.16,)</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.janeluo/ikanalyzer -->
