--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0</version>
     <modules>
         <module>hive-study</module>
-        <module>my-spark</module>
+        <module>spark-study</module>
     </modules>
     <properties>
         <scala.binary.version>2.10</scala.binary.version>
