--- a/spark-study/pom.xml
+++ b/spark-study/pom.xml
@@ -27,6 +27,12 @@
 
         <dependency>
             <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_2.10</artifactId>
+            <version>[2.2.2,)</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_2.10</artifactId>
             <version>[2.2.2,)</version>
         </dependency>
