--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <scala.binary.version>2.10</scala.binary.version>
         <jackson.version>[2.9.10.4,)</jackson.version>
+        <hadoop.version>2.10.0</hadoop.version>
     </properties>
     <dependencies>
         <dependency>
@@ -25,17 +26,17 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
-            <version>3.2.1</version>
+            <version>${hadoop.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
-            <version>3.2.1</version>
+            <version>${hadoop.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
-            <version>3.2.1</version>
+            <version>${hadoop.version}</version>
         </dependency>
         <!-- mr test -->
         <dependency>
