--- a/spark-study/pom.xml
+++ b/spark-study/pom.xml
@@ -33,6 +33,12 @@
 
         <dependency>
             <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka_2.10</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_2.10</artifactId>
             <version>[2.2.2,)</version>
         </dependency>
