--- a/spark-streaming/pom.xml
+++ b/spark-streaming/pom.xml
@@ -8,38 +8,24 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>my-spark</artifactId>
+
+    <artifactId>spark-streaming</artifactId>
 
     <dependencies>
-        <!-- Apache Spark -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.10</artifactId>
-            <version>[2.2.2,)</version>
+            <artifactId>spark-core_2.12</artifactId>
+            <version>2.4.6</version>
         </dependency>
-
-       <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.10</artifactId>
-            <version>[2.2.2,)</version>
-        </dependency>
-
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming_2.10</artifactId>
-            <version>[2.2.2,)</version>
+            <artifactId>spark-streaming_2.12</artifactId>
+            <version>2.4.6</version>
         </dependency>
-
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hive_2.10</artifactId>
-            <version>[2.2.2,)</version>
+            <artifactId>spark-streaming-kafka-0-10_2.12</artifactId>
+            <version>2.4.6</version>
         </dependency>
     </dependencies>
 </project>
