--- a/spark-streaming/pom.xml
+++ b/spark-streaming/pom.xml
@@ -27,5 +27,10 @@
             <artifactId>spark-streaming-kafka-0-10_2.12</artifactId>
             <version>2.4.6</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.3</version>
+        </dependency>
     </dependencies>
 </project>
