[TECH][Minggl]: add hbase example

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>hive-study</module>
         <module>spark-study</module>
         <module>spark-streaming</module>
+        <module>hbase-study</module>
     </modules>
     <properties>
         <scala.binary.version>2.10</scala.binary.version>
